--- a/app/src/main/res/layout/signup_view.xml
+++ b/app/src/main/res/layout/signup_view.xml
@@ -25,7 +25,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <Button
-        android:id="@+id/btn_signup"
+        android:id="@+id/btn_signin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="93dp"
@@ -100,7 +100,7 @@
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/secondary_text_dark_nodisable"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_signup"
+        app:layout_constraintBottom_toTopOf="@+id/btn_signin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText6" />
