--- a/app/src/main/res/layout/home_view.xml
+++ b/app/src/main/res/layout/home_view.xml
@@ -127,7 +127,7 @@
                         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
                     <TextView
-                        android:id="@+id/txt_title_lsn1"
+                        android:id="@+id/txt_materia_needed"
                         android:layout_width="136dp"
                         android:layout_height="0dp"
                         android:layout_marginStart="16dp"
@@ -146,7 +146,7 @@
                         app:layout_constraintVertical_bias="0.0" />
 
                     <TextView
-                        android:id="@+id/txt_age_lsn1"
+                        android:id="@+id/txt_materials"
                         android:layout_width="85dp"
                         android:layout_height="53dp"
                         android:layout_marginStart="241dp"
